--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\xampp-new\htdocs\blue-star\assets\img\logo\favicon.ico,0
+IconResource=C:\xampp\htdocs\blue-star\assets\img\logo\favicon.ico,0
 [ViewState]
 Mode=
 Vid=
